# bilibili-live-danmaku-cli

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.en.md  README.md  build_release.sh  config_example.json
src/: client.rs  config.rs  context.rs  depack.rs  main.rs  message.rs  session_data.rs
src/message/: danmaku.rs  gift.rs  guard.rs  interact.rs  live.rs  mod.rs  super_chat.rs  warning.rs  welcome.rs
src/message/data/: guard.rs  medal.rs  mod.rs  user.rs
src/packet/: http.rs  mod.rs  ws.rs
