[package]
name = "bilibili-live-danmaku-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1"
reqwest = { version = "0.12", features = ["json"] }
colored = "2"
log = "0.4.21"
time = "0.3.36"
url = "2.5.0"
futures-util = "0.3.30"
bincode = "1.3.3"
hex = "0.4.3"
derive_more = "0.99.17"
chrono = "0.4.38"
brotli = "6.0.0"
simple_logger = "5.0.0"
