[package]
name = "bilibili-live-danmaku-cli"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true


[dependencies]
serde_repr = "0.1"
colored = "2"
log = "0.4.21"
time = "0.3.36"
bincode = "1.3.3"
hex = "0.4.3"
derive_more = "0.99.17"
chrono = "0.4.38"
brotli = "6.0.0"
simple_logger = "5.0.0"
ureq = { version = "2.9.7", default-features = false, features = ["native-tls", "json"] }
websocket = { version = "0.27.1", default-features = false, features = ["sync", "sync-ssl"] }
native-tls = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
